Equipment: Crosslink items with LW equivalents

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -32,6 +32,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<p>None of the swords listed below can be equipped by anyone but Kris. See <a href="#other">Other weapons</a> for swords that can be equipped by others.</p>
 
 	<h3 id="woodblade">Wood Blade</h3>
+	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#pencil' | relative_url }}">Pencil</a>.</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -71,6 +72,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 
 	<h3 id="spookysword">Spookysword</h3>
+	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#halloweenpencil' | relative_url }}">Halloween Pencil</a>.</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -102,7 +104,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 
 	<h3 id="trefoil">Trefoil</h3>
-	<p>Unused item that's not available in the playable game, but included for completion.</p>
+	<p>Unused item that's not available in the playable game, but included for completion. Dark World equivalent of the <a href="{{ '/misc/lightitems#luckypencil' | relative_url }}">Lucky Pencil</a>.</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -166,6 +168,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 
 	<h3 id="bounceblade">Bounce Blade</h3>
+	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#eraser' | relative_url }}">Eraser</a>.</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -198,6 +201,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 
 	<h3 id="mechasaber">Mecha Saber</h3>
+	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#mechanicalpencil' | relative_url }}">Mechanical Pencil</a>.</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -230,6 +234,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 
 	<h3 id="saber10">Saber 10</h3>
+	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#cactusneedle' | relative_url }}">Cactus Needle</a>.</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -262,6 +267,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 
 	<h3 id="winglade">Winglade</h3>
+	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#quillpen' | relative_url }}">Quill Pen</a>.</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -961,7 +967,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 
 	<h3 id="blackshard">Black Shard</h3>
-	<p>Equippable by Kris and Noelle.</p>
+	<p>Equippable by Kris and Noelle. Dark World equivalent of the <a href="{{ '/misc/lightitems#blackshard' | relative_url }}">Black Shard (Light World)</a>.</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -991,7 +997,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 
 	<h3 id="jingleblade">Jingle Blade</h3>
-	<p>Equippable by Kris and Noelle.</p>
+	<p>Equippable by Kris and Noelle. Dark World equivalent of the <a href="{{ '/misc/lightitems#holidaypencil' | relative_url }}">Holiday Pencil</a>.</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1484,6 +1490,7 @@ wwho is who you're trying to equip the weapon/armor to
 
 
 	<h3 id="silverwatch">Silver Watch</h3>
+	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#wristwatch' | relative_url }}">Wristwatch</a>.</p>
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
