LW items: Comic Sansify Sans's dialogue

--- a/misc/lightitems.html
+++ b/misc/lightitems.html
@@ -339,47 +339,47 @@ sources:
 	<h4>If standing near Sans</h4>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="0"></d-sprite>
-		<d-text asterisk>what? a heart shaped box of chocolates?</d-text>
+		<d-text asterisk font="sans">what? a heart shaped box of chocolates?</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="3"></d-sprite>
-		<d-text asterisk>oh, i get it.</d-text>
+		<d-text asterisk font="sans">oh, i get it.</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="2"></d-sprite>
-		<d-text asterisk>heh.</d-text>
+		<d-text asterisk font="sans">heh.</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="2"></d-sprite>
-		<d-text asterisk>wow.</d-text>
+		<d-text asterisk font="sans">wow.</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="0"></d-sprite>
-		<d-text asterisk>you're really...</d-text>
+		<d-text asterisk font="sans">you're really...</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="0"></d-sprite>
-		<d-text asterisk>hm.</d-text>
+		<d-text asterisk font="sans">hm.</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="1"></d-sprite>
-		<d-text asterisk>alright, alright.</d-text>
+		<d-text asterisk font="sans">alright, alright.</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="0"></d-sprite>
-		<d-text asterisk>... okay.</d-text>
+		<d-text asterisk font="sans">... okay.</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="3"></d-sprite>
-		<d-text asterisk>you wanna make a return on these, don't you?</d-text>
+		<d-text asterisk font="sans">you wanna make a return on these, don't you?</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="5"></d-sprite>
-		<d-text asterisk>okay, okay, no need to break my heart.</d-text>
+		<d-text asterisk font="sans">okay, okay, no need to break my heart.</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-sprite speaker="Sans" emotion="0"></d-sprite>
-		<d-text asterisk>here's five dollars.</d-text>
+		<d-text asterisk font="sans">here's five dollars.</d-text>
 	</d-box>
 	<d-box theme="light">
 		<d-text asterisk>(You traded the chocolates for 5 dollars.)</d-text>
