Add credits to Misc subpages where missing
Specifically added to Equipment, Light World items, and Save points pages

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -13,6 +13,8 @@ sources:
   -
     name: gml_Object_obj_darkcontroller_Step_0
     chapters: [4]
+credits: >
+  <p>Compiled by wovenstarlight.</p>
 ---
 {% comment %}
 The value of global.submenu controls which editor you're in:
