--- a/misc/lightitems.html
+++ b/misc/lightitems.html
@@ -27,6 +27,8 @@ sources:
     name: gml_GlobalScript_scr_text
     chapters: [1, 2, 3, 4]
     note: Ball of Junk's DROP warning
+credits: >
+  <p>Compiled by wovenstarlight.</p>
 ---
 
 <section class="d-section" id="shared">
