--- a/misc/savepoints.html
+++ b/misc/savepoints.html
@@ -12,6 +12,8 @@ sources:
     name: gml_Object_obj_savepoint_Other_10
     chapters: [1, 2, 3, 4]
     note: actual narration
+credits: >
+  <p>Compiled by wovenstarlight.</p>
 ---
 {% comment %}
 Room IDs retrieved from scr_get_room_list() in gml_GlobalScript_scr_get_room_by_id.gml
