LW items: Adjust wording (e.g. "Fallbacks" headers)
Prep for Dark World items page, which should match wording

--- a/misc/lightitems.html
+++ b/misc/lightitems.html
@@ -31,8 +31,8 @@ credits: >
   <p>Compiled by wovenstarlight.</p>
 ---
 
-<section class="d-section" id="shared">
-	<h2>Shared text</h2>
+<section class="d-section" id="standard">
+	<h2>Standard text</h2>
 	<p>Text that's identical for all items, unless specified otherwise in their sections.</p>
 
 	<h3>Dropping an item</h3>
@@ -738,7 +738,7 @@ credits: >
 <section class="d-section">
 	<h2>Fallbacks</h2>
 
-	<h3>Standard fallback</h3>
+	<h3>Invalid item ID</h3>
 	<p>Plays when an item's ID isn't accounted for in the code.</p>
 
 	<h4>Info</h4>
@@ -748,7 +748,7 @@ credits: >
 
 	<hr>
 
-	<h3>Default item</h3>
+	<h3>Default (null) item</h3>
 	<p>Plays when the unused item ID 0 is provided, probably for testing purposes.</p>
 
 	<h4>Info</h4>
