Equipment: Add game's internal IDs

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -33,7 +33,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Kris's swords</h2>
 	<p>None of the swords listed below can be equipped by anyone but Kris. See <a href="#other">Other weapons</a> for swords that can be equipped by others.</p>
 
-	<h3 id="woodblade">Wood Blade</h3>
+	<h3 id="woodblade">Wood Blade</h3> <!-- weapon id 1 -->
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#pencil' | relative_url }}">Pencil</a>.</p>
 
 	<h4>Description</h4>
@@ -73,7 +73,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="spookysword">Spookysword</h3>
+	<h3 id="spookysword">Spookysword</h3> <!-- weapon id 5 -->
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#halloweenpencil' | relative_url }}">Halloween Pencil</a>.</p>
 
 	<h4>Description</h4>
@@ -105,7 +105,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="trefoil">Trefoil</h3>
+	<h3 id="trefoil">Trefoil</h3> <!-- weapon id 8 -->
 	<p>Unused item that's not available in the playable game, but included for completion. Dark World equivalent of the <a href="{{ '/misc/lightitems#luckypencil' | relative_url }}">Lucky Pencil</a>.</p>
 
 	<h4>Description</h4>
@@ -138,7 +138,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="twistedsword">Twisted Sword</h3>
+	<h3 id="twistedsword">Twisted Sword</h3> <!-- weapon id 11 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -169,7 +169,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="bounceblade">Bounce Blade</h3>
+	<h3 id="bounceblade">Bounce Blade</h3> <!-- weapon id 14 -->
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#eraser' | relative_url }}">Eraser</a>.</p>
 
 	<h4>Description</h4>
@@ -202,7 +202,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="mechasaber">Mecha Saber</h3>
+	<h3 id="mechasaber">Mecha Saber</h3> <!-- weapon id 16 -->
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#mechanicalpencil' | relative_url }}">Mechanical Pencil</a>.</p>
 
 	<h4>Description</h4>
@@ -235,7 +235,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="saber10">Saber 10</h3>
+	<h3 id="saber10">Saber 10</h3> <!-- weapon id 23 -->
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#cactusneedle' | relative_url }}">Cactus Needle</a>.</p>
 
 	<h4>Description</h4>
@@ -268,7 +268,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="winglade">Winglade</h3>
+	<h3 id="winglade">Winglade</h3> <!-- weapon id 53 -->
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#quillpen' | relative_url }}">Quill Pen</a>.</p>
 
 	<h4>Description</h4>
@@ -302,7 +302,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Susie's axes</h2>
 	<p>None of the axes listed below can be equipped by anyone but Susie.</p>
 
-	<h3 id="maneax">Mane Ax</h3>
+	<h3 id="maneax">Mane Ax</h3> <!-- weapon id 2 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -333,7 +333,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="braveax">Brave Ax</h3>
+	<h3 id="braveax">Brave Ax</h3> <!-- weapon id 6 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -365,7 +365,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="devilsknife">Devilsknife</h3>
+	<h3 id="devilsknife">Devilsknife</h3> <!-- weapon id 7 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -397,7 +397,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="autoaxe">Auto Axe</h3>
+	<h3 id="autoaxe">Auto Axe</h3> <!-- weapon id 17 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -428,7 +428,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="toxicaxe">Toxic Axe</h3>
+	<h3 id="toxicaxe">Toxic Axe</h3> <!-- weapon id 24 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -459,7 +459,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="justiceaxe">Justice Axe</h3>
+	<h3 id="justiceaxe">Justice Axe</h3> <!-- weapon id 52 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -490,7 +490,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="absorbax">Absorb Ax</h3>
+	<h3 id="absorbax">Absorb Ax</h3> <!-- weapon id 54 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -523,7 +523,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Ralsei's scarves</h2>
 	<p>None of the scarves listed below can be equipped by anyone but Ralsei.</p>
 
-	<h3 id="redscarf">Red Scarf</h3>
+	<h3 id="redscarf">Red Scarf</h3> <!-- weapon id 3 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -554,7 +554,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="ragger">Ragger</h3>
+	<h3 id="ragger">Ragger</h3> <!-- weapon id 9 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -585,7 +585,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="daintyscarf">Dainty Scarf</h3>
+	<h3 id="daintyscarf">Dainty Scarf</h3> <!-- weapon id 10 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -616,7 +616,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="cheerscarf">Cheer Scarf</h3>
+	<h3 id="cheerscarf">Cheer Scarf</h3> <!-- weapon id 15 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -647,7 +647,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="fiberscarf">Fiber Scarf</h3>
+	<h3 id="fiberscarf">Fiber Scarf</h3> <!-- weapon id 18 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -679,7 +679,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="ragger2">Ragger 2</h3>
+	<h3 id="ragger2">Ragger 2</h3> <!-- weapon id 19 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -711,7 +711,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="puppetscarf">Puppet Scarf</h3>
+	<h3 id="puppetscarf">Puppet Scarf</h3> <!-- weapon id 21 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -743,7 +743,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="flexscarf">Flex Scarf</h3>
+	<h3 id="flexscarf">Flex Scarf</h3> <!-- weapon id 25 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -774,7 +774,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="scarfmark">Scarf Mark</h3>
+	<h3 id="scarfmark">Scarf Mark</h3> <!-- weapon id 51 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -810,7 +810,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Noelle's rings</h2>
 	<p>None of the rings listed below can be equipped by anyone but Noelle.</p>
 
-	<h3 id="snowring">Snow Ring</h3>
+	<h3 id="snowring">Snow Ring</h3> <!-- weapon id 12 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -841,7 +841,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="thornring">Thorn Ring</h3>
+	<h3 id="thornring">Thorn Ring</h3> <!-- weapon id 13 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -870,7 +870,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="freezering">Freeze Ring</h3>
+	<h3 id="freezering">Freeze Ring</h3> <!-- weapon id 22 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -903,7 +903,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<h2>Other weapons</h2>
 	<p>Equippable by multiple or no party members.</p>
 
-	<h3 id="everybodyweapon">Everybody Weapon</h3>
+	<h3 id="everybodyweapon">Everybody Weapon</h3> <!-- weapon id 4 -->
 	<p>Equippable by Kris, Susie, Ralsei, and Noelle.</p>
 
 	<h4>Description</h4>
@@ -935,7 +935,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="brokensword">Broken Sword</h3>
+	<h3 id="brokensword">Broken Sword</h3> <!-- weapon id 20 -->
 	<p>Cannot be equipped by any party member.</p>
 
 	<h4>Description</h4>
@@ -968,7 +968,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="blackshard">Black Shard</h3>
+	<h3 id="blackshard">Black Shard</h3> <!-- weapon id 26 -->
 	<p>Equippable by Kris and Noelle. Dark World equivalent of the <a href="{{ '/misc/lightitems#blackshard' | relative_url }}">Black Shard (Light World)</a>.</p>
 
 	<h4>Description</h4>
@@ -998,7 +998,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="jingleblade">Jingle Blade</h3>
+	<h3 id="jingleblade">Jingle Blade</h3> <!-- weapon id 50 -->
 	<p>Equippable by Kris and Noelle. Dark World equivalent of the <a href="{{ '/misc/lightitems#holidaypencil' | relative_url }}">Holiday Pencil</a>.</p>
 
 	<h4>Description</h4>
@@ -1040,7 +1040,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 	<p class="note">Susie's armor is not removed.</p>
 
-	<h3 id="ambercard">Amber Card</h3>
+	<h3 id="ambercard">Amber Card</h3> <!-- armor id 1 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1071,7 +1071,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="dicebrace">Dice Brace</h3>
+	<h3 id="dicebrace">Dice Brace</h3> <!-- armor id 2 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1102,7 +1102,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="pinkribbon">Pink Ribbon</h3>
+	<h3 id="pinkribbon">Pink Ribbon</h3> <!-- armor id 3 -->
 
 	<h4>Description</h4>
 	<h5>Outside of Chapter 3</h5>
@@ -1155,7 +1155,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="whiteribbon">White Ribbon</h3>
+	<h3 id="whiteribbon">White Ribbon</h3> <!-- armor id 4 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1202,7 +1202,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="ironshackle">Iron Shackle</h3>
+	<h3 id="ironshackle">Iron Shackle</h3> <!-- armor id 5 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1233,7 +1233,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="mousetoken">Mouse Token</h3>
+	<h3 id="mousetoken">Mouse Token</h3> <!-- armor id 6 -->
 	<p>Unused, but included for completion.</p>
 
 	<h4>Description</h4>
@@ -1271,7 +1271,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="jevilstail">Jevilstail</h3>
+	<h3 id="jevilstail">Jevilstail</h3> <!-- armor id 7 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1302,7 +1302,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="silvercard">Silver Card</h3>
+	<h3 id="silvercard">Silver Card</h3> <!-- armor id 8 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1333,7 +1333,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="twinribbon">Twin Ribbon</h3>
+	<h3 id="twinribbon">Twin Ribbon</h3> <!-- armor id 9 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1366,7 +1366,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="glowwrist">Glow Wrist</h3>
+	<h3 id="glowwrist">Glow Wrist</h3> <!-- armor id 10 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1397,7 +1397,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="chainmail">Chain Mail</h3>
+	<h3 id="chainmail">Chain Mail</h3> <!-- armor id 11 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1428,7 +1428,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="bshotbowtie">B. Shot Bowtie</h3>
+	<h3 id="bshotbowtie">B. Shot Bowtie</h3> <!-- armor id 12 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1459,7 +1459,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="spikeband">Spike Band</h3>
+	<h3 id="spikeband">Spike Band</h3> <!-- armor id 13 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1491,7 +1491,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="silverwatch">Silver Watch</h3>
+	<h3 id="silverwatch">Silver Watch</h3> <!-- armor id 14 -->
 	<p>Dark World equivalent of the <a href="{{ '/misc/lightitems#wristwatch' | relative_url }}">Wristwatch</a>.</p>
 
 	<h4>Description</h4>
@@ -1523,7 +1523,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="tensionbow">Tension Bow</h3>
+	<h3 id="tensionbow">Tension Bow</h3> <!-- armor id 15 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1537,7 +1537,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="mannequin">Mannequin</h3>
+	<h3 id="mannequin">Mannequin</h3> <!-- armor id 16 -->
 	<p>This can only be equipped by Kris.</p>
 
 	<h4>Description</h4>
@@ -1569,7 +1569,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="darkgoldband">Dark Gold Band</h3>
+	<h3 id="darkgoldband">Dark Gold Band</h3> <!-- armor id 17 -->
 	<p>Unused. Some of its data appears to be copied over from the Mannequin; party reactions are identical to the Mannequin's, as is the fact that this can only be equipped by Kris.</p>
 
 	<h4>Description</h4>
@@ -1601,7 +1601,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="skymantle">Sky Mantle</h3>
+	<h3 id="skymantle">Sky Mantle</h3> <!-- armor id 18 -->
 	<p>Unused, but included for completion.</p>
 
 	<h4>Description</h4>
@@ -1617,7 +1617,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="spikeshackle">Spike Shackle</h3>
+	<h3 id="spikeshackle">Spike Shackle</h3> <!-- armor id 19 -->
 	<p>Unused, but included for completion.</p>
 
 	<h4>Description</h4>
@@ -1647,7 +1647,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="frayedbowtie">Frayed Bowtie</h3>
+	<h3 id="frayedbowtie">Frayed Bowtie</h3> <!-- armor id 20 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1680,7 +1680,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="dealmaker">Dealmaker</h3>
+	<h3 id="dealmaker">Dealmaker</h3> <!-- armor id 21 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1712,7 +1712,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="royalpin">Royal Pin</h3>
+	<h3 id="royalpin">Royal Pin</h3> <!-- armor id 22 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1744,7 +1744,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="shadowmantle">Shadow Mantle</h3>
+	<h3 id="shadowmantle">Shadow Mantle</h3> <!-- armor id 23 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1778,7 +1778,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="lodestone">Lode Stone</h3>
+	<h3 id="lodestone">Lode Stone</h3> <!-- armor id 24 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1847,7 +1847,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="gingerguard">Ginger Guard</h3>
+	<h3 id="gingerguard">Ginger Guard</h3> <!-- armor id 25 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1879,7 +1879,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="blueribbon">Blue Ribbon</h3>
+	<h3 id="blueribbon">Blue Ribbon</h3> <!-- armor id 26 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -1988,7 +1988,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="tennatie">Tenna Tie</h3>
+	<h3 id="tennatie">Tenna Tie</h3> <!-- armor id 27 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -2020,7 +2020,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="waferguard">Waferguard</h3>
+	<h3 id="waferguard">Waferguard</h3> <!-- armor id 50 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -2055,7 +2055,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="mysticband">Mystic Band</h3>
+	<h3 id="mysticband">Mystic Band</h3> <!-- armor id 51 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -2087,7 +2087,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="powerband">Power Band</h3>
+	<h3 id="powerband">Power Band</h3> <!-- armor id 52 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -2119,7 +2119,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="princessribbon">Princess Ribbon</h3>
+	<h3 id="princessribbon">Princess Ribbon</h3> <!-- armor id 53 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
@@ -2152,7 +2152,7 @@ wwho is who you're trying to equip the weapon/armor to
 	<hr>
 
 
-	<h3 id="goldwidow">Gold Widow</h3>
+	<h3 id="goldwidow">Gold Widow</h3> <!-- armor id 54 -->
 
 	<h4>Description</h4>
 	<d-box theme="objmenu">
