Equipment: Correct TV Dinner link

--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -1807,7 +1807,7 @@ wwho is who you're trying to equip the weapon/armor to
 	</d-box>
 
 	<h4>Unused variant 1</h4>
-	<p>An alternate description and reactions. The flag that's supposed to trigger these never actually gets set. Maybe it was supposed to represent which save slot (1/2/3) you were using, like <a href="{{ '/misc/items#tvdinner' | relative_url }}">some item descriptions</a> do...?</p>
+	<p>An alternate description and reactions. The flag that's supposed to trigger these never actually gets set. Maybe it was supposed to represent which save slot (1/2/3) you were using, like <a href="{{ '/misc/darkitems#tvdinner' | relative_url }}">some item descriptions</a> do...?</p>
 
 	<d-box theme="objmenu">
 		<d-text>A lodestone token inscribed with the record of<span class="break"></span> a legend athlete. Enemy bullets give a bit more TP.</d-text>
