--- a/misc/equipment.html
+++ b/misc/equipment.html
@@ -1809,35 +1809,45 @@ wwho is who you're trying to equip the weapon/armor to
 	<h4>Unused variant 1</h4>
 	<p>An alternate description and reactions. The flag that's supposed to trigger these never actually gets set. Maybe it was supposed to represent which save slot (1/2/3) you were using, like <a href="{{ '/misc/darkitems#tvdinner' | relative_url }}">some item descriptions</a> do...?</p>
 
+	<h5>Description</h5>
 	<d-box theme="objmenu">
 		<d-text>A lodestone token inscribed with the record of<span class="break"></span> a legend athlete. Enemy bullets give a bit more TP.</d-text>
 	</d-box>
+	<h5>Reactions</h5>
+	<h6>Susie</h6>
 	<d-box theme="objreact">
 		<d-speaker>Susie</d-speaker>
 		<d-text>Consolation prize, nice.</d-text>
 	</d-box>
+	<h6>Ralsei</h6>
 	<d-box theme="objreact">
 		<d-speaker>Ralsei</d-speaker>
 		<d-text>A reward... just for me?</d-text>
 	</d-box>
+	<h6>Noelle</h6>
 	<d-box theme="objreact">
 		<d-speaker>Noelle</d-speaker>
 		<d-text>Thanks, but, this is Azzy's...?</d-text>
 	</d-box>
 
 	<h4>Unused variant 2</h4>
+	<h5>Description</h5>
 	<d-box theme="objmenu">
 		<d-text>A lodestone token in the shape of a pizza.</d-text>
 		<d-text>Enemy bullets give a bit more TP.</d-text>
 	</d-box>
+	<h5>Reactions</h5>
+	<h6>Susie</h6>
 	<d-box theme="objreact">
 		<d-speaker>Susie</d-speaker>
 		<d-text>I'm going to eat this.</d-text>
 	</d-box>
+	<h6>Ralsei</h6>
 	<d-box theme="objreact">
 		<d-speaker>Ralsei</d-speaker>
 		<d-text>If I wear it, Susie won't eat it!</d-text>
 	</d-box>
+	<h6>Noelle</h6>
 	<d-box theme="objreact">
 		<d-speaker>Noelle</d-speaker>
 		<d-text>D-don't eat that! I'll wear it!</d-text>
